# fastapi-project-generator

./: CONTRIBUTING.md  README.md  fastapi-project-generator.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md  work-item.md
.github/workflows/: commitlint.yaml  publish.yaml  test.yaml  title.yaml
fastapi_project_generator/: .env  .gitlab-ci.yml  README.md  docker-compose.override.yml  docker-compose.yml  fastapi-cookie-cutter-config-file.yml
fastapi_project_generator/backend/app/: .flake8  .pre-commit-config.yaml  pyproject.toml
fastapi_project_generator/backend/app/alembic/: env.py
fastapi_project_generator/backend/app/alembic/versions/: d4867f3a4c0a_first_revision.py
fastapi_project_generator/backend/app/app/: worker.py
fastapi_project_generator/backend/app/app/core/: config.py
fastapi_project_generator/backend/app/app/crud/: base.py  crud_user.py
scripts/: dev-fsfp-back.sh  dev-fsfp.sh  dev-link.sh  discard-dev-files.sh  generate_cookiecutter_config.py  test.sh
